past & current dues

--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -268,17 +268,17 @@
                                         <th colspan="2" class="border-r">Reschedulement/Restructuring/Write-off/Remission cases of the branch visited</th>
                                     </tr>
                                     <tr class="table-header-background text-center">
-                                        <th class="border-r">P.D.</th>
-                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Past Dues</th>
+                                        <th class="border-r">Current Dues</th>
                                         <th class="border-r">Total</th>
-                                        <th class="border-r">P.D.</th>
-                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Past Dues</th>
+                                        <th class="border-r">Current Dues</th>
                                         <th class="border-r">Total</th>
-                                        <th class="border-r">P.D.</th>
-                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Past Dues</th>
+                                        <th class="border-r">Current Dues</th>
                                         <th class="border-r">Total</th>
-                                        <th class="border-r">P.D.</th>
-                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Past Dues</th>
+                                        <th class="border-r">Current Dues</th>
                                         <th class="border-r">Total</th>
                                         <th class="border-r">Activity</th>
                                         <th class="border-r">No.</th>
