--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -173,17 +173,17 @@
                                         <th rowspan="2" class="border-r">Remarks</th>
                                     </tr>
                                     <tr class="table-header-background text-center">
-                                        <th class="border-r">P.D.</th>
-                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Past Dues</th>
+                                        <th class="border-r">Current Dues</th>
                                         <th class="border-r">Total</th>
-                                        <th class="border-r">P.D.</th>
-                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Past Dues</th>
+                                        <th class="border-r">Current Dues</th>
                                         <th class="border-r">Total</th>
-                                        <th class="border-r">P.D.</th>
-                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Past Dues</th>
+                                        <th class="border-r">Current Dues</th>
                                         <th class="border-r">Total</th>
-                                        <th class="border-r">P.D.</th>
-                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Past Dues</th>
+                                        <th class="border-r">Current Dues</th>
                                         <th class="border-r">Total</th>
                                     </tr>
                                     </thead>
