apk deployment change

--- a/src/app/modules/user-management/apk-deployment/apk-deployment.component.html
+++ b/src/app/modules/user-management/apk-deployment/apk-deployment.component.html
@@ -81,21 +81,22 @@
     </div>
     <div class="row mt-2">
         <div class="col-lg-12 p-0">
-            <table class="table mb-0 ">
+            <table class="table table-striped mb-0 ">
                 <thead>
                 <tr class="table-header-background text-center">
-                    <th class="border-r">Image</th>
-                    <th class="border-r">Video</th>
-                    <th class="border-r">PDF</th>
-                    <th class="border-r">APK</th>
+                    <th class="border-r">File</th>
+                    <th class="border-r">Action</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
                     <td class="border-r"></td>
-                    <td class="border-r"></td>
-                    <td class="border-r"></td>
-                    <td class="border-r"></td>
+                    <td class="border-r">
+<!--                        <button mat-icon-button color="primary"-->
+<!--                                (click)="downloadFile()">-->
+<!--                            <mat-icon title="download">file_download</mat-icon>-->
+<!--                        </button>-->
+                    </td>
                 </tr>
                 </tbody>
             </table>
