--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.scss
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.scss
@@ -2,17 +2,58 @@
     background-color: white;
     border-radius: 5px;
   }
+tbody{
+    border-top: none !important;
+    td{
+    padding: 0.5rem 0.5rem 0px 0.5rem !important;
 
+    }
+    .mat-form-field-fluid{
+        width: 9rem !important;
+    }
+}
+  .ist-table{
+    thead{
+        border: none !important;
+    }
   thead tr th {
     font-size: 12px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    min-width: 120px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    min-width: 80px;
+    font-weight: lighter;
 }
-thead{
-    border: none !important;
-}
+  }
+  .sec-table{
+    thead{
+        border: none !important;
+    }
+    thead tr th {
+      font-size: 12px;
+      padding-top: 3px;
+      padding-bottom: 3px;
+      min-width: 220px;
+      font-weight: lighter;
+  }
+    }
+    .third-table{
+        thead{
+            border: none !important;
+        }
+        thead tr th {
+          font-size: 12px;
+          padding-top: 3px;
+          padding-bottom: 3px;
+          min-width: 220px;
+          font-weight: lighter;
+      }
+        }
+
 
 ul{
     list-style-type: disc;
 }
+thead tr {
+    height: 30px;
+}
+
