adding zone branch

--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -61,7 +61,7 @@
 
                             </div>
 
-                            <div class="col-lg-12 mt-2 p-0 overflow-scroll">
+                            <div class="col-lg-12 p-0 ist-table overflow-auto border shadow-xs rounded-sm bg-gray-50" style="height: calc(100vh - 220px);">
                                 <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
