--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -69,83 +69,83 @@
 
                             </div>
 
-                            <div class="col-lg-12 mt-2 p-0 overflow-scroll">
+                            <div class="col-lg-12 p-0 ist-table overflow-auto border shadow-xs rounded-sm bg-gray-50 mt-2">
                                 <table class="table">
                                     <thead>
                                     <tr class="table-header-background text-center">
-                                        <th rowspan="3" class="border-r">Date</th>
-                                        <th colspan="2" rowspan="2" class="border-r">Departure from</th>
-                                        <th colspan="2" rowspan="2" class="border-r">Arrival at</th>
-                                        <th colspan="6" class="border-r">Portfolio of the Province/Zone/Branch/Circle</th>
-                                        <th rowspan="3" class="border-r">No. of defaulters contacted </th>
-                                        <th rowspan="3" class="border-r">Results of contacts so made
+                                        <th rowspan="3" class="border-r border-gray-400">Date</th>
+                                        <th colspan="2" rowspan="2" class="border-r border-gray-400">Departure from</th>
+                                        <th colspan="2" rowspan="2" class="border-r border-gray-400">Arrival at</th>
+                                        <th colspan="6" class="border-r border-gray-400">Portfolio of the Province/Zone/Branch/Circle</th>
+                                        <th rowspan="3" class="border-r border-gray-400">No. of defaulters contacted </th>
+                                        <th rowspan="3" class="border-r border-gray-400">Results of contacts so made
                                         </th>
                                     </tr>
 
                                     <tr class="table-header-background text-center">
-                                        <th colspan="2" class="border-r">General</th>
-                                        <th colspan="2" class="border-r">NPLs</th>
-                                        <th colspan="2" class="border-r">SAM</th>
+                                        <th colspan="2" class="border-r border-gray-400">General</th>
+                                        <th colspan="2" class="border-r border-gray-400">NPLs</th>
+                                        <th colspan="2" class="border-r border-gray-400">SAM</th>
                                     </tr>
 
                                     <tr class="table-header-background text-center">
-                                        <th class="border-r">Place</th>
-                                        <th class="border-r">Time</th>
-                                        <th class="border-r">Place</th>
-                                        <th class="border-r">Time</th>
-                                        <th class="border-r">No.</th>
-                                        <th class="border-r">Amt.</th>
-                                        <th class="border-r">No.</th>
-                                        <th class="border-r">Amt.</th>
-                                        <th class="border-r">No.</th>
-                                        <th class="border-r">Amt.</th>
+                                        <th class="border-r border-gray-400">Place</th>
+                                        <th class="border-r border-gray-400">Time</th>
+                                        <th class="border-r border-gray-400">Place</th>
+                                        <th class="border-r border-gray-400">Time</th>
+                                        <th class="border-r border-gray-400">No.</th>
+                                        <th class="border-r border-gray-400">Amt.</th>
+                                        <th class="border-r border-gray-400">No.</th>
+                                        <th class="border-r border-gray-400">Amt.</th>
+                                        <th class="border-r border-gray-400">No.</th>
+                                        <th class="border-r border-gray-400">Amt.</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td class="border-r">
+                                        <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td class="border-r">
+                                        <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td class="border-r">
+                                        <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td class="border-r">
+                                        <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td class="border-r">
+                                        <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r">
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td class="border-r">
+                                        <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
@@ -156,61 +156,61 @@
                                 </table>
                             </div>
 
-                            <div class="col-lg-12 mt-2 p-0 overflow-scroll">
+                            <div class="col-lg-12 p-0  third-table  overflow-auto border shadow-xs rounded-sm bg-gray-50 mt-2">
                                 <table class="table">
                                     <thead>
                                     <tr class="table-header-background text-center">
-                                        <th colspan="15" class="border-r">RECOVERY</th>
+                                        <th colspan="15" class="border-r border-gray-400">RECOVERY</th>
                                     </tr>
                                     </thead>
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <!-- UTILIZATIONS -->
-                                        <th colspan="3" class="border-r">Annual Target/Recoverable of Province/Zone/Branch/Circle</th>
-                                        <th colspan="3" class="border-r">Recovery during the month under report</th>
-                                        <th colspan="3" class="border-r">Balance Recoverable</th>
-                                        <th colspan="3" class="border-r">Recovery during corresponding period</th>
-                                        <th rowspan="2" class="border-r">Increase/Deficit</th>
-                                        <th rowspan="2" class="border-r">Measures/Efforts for boosting up recovery</th>
-                                        <th rowspan="2" class="border-r">Remarks</th>
+                                        <th colspan="3" class="border-r border-gray-400">Annual Target/Recoverable of Province/Zone/Branch/Circle</th>
+                                        <th colspan="3" class="border-r border-gray-400">Recovery during the month under report</th>
+                                        <th colspan="3" class="border-r border-gray-400">Balance Recoverable</th>
+                                        <th colspan="3" class="border-r border-gray-400">Recovery during corresponding period</th>
+                                        <th rowspan="2" class="border-r border-gray-400">Increase/Deficit</th>
+                                        <th rowspan="2" class="border-r border-gray-400">Measures/Efforts for boosting up recovery</th>
+                                        <th rowspan="2" class="border-r border-gray-400">Remarks</th>
                                     </tr>
                                     <tr class="table-header-background text-center">
-                                        <th class="border-r">Past Dues</th>
-                                        <th class="border-r">Current Dues</th>
-                                        <th class="border-r">Total</th>
-                                        <th class="border-r">Past Dues</th>
-                                        <th class="border-r">Current Dues</th>
-                                        <th class="border-r">Total</th>
-                                        <th class="border-r">Past Dues</th>
-                                        <th class="border-r">Current Dues</th>
-                                        <th class="border-r">Total</th>
-                                        <th class="border-r">Past Dues</th>
-                                        <th class="border-r">Current Dues</th>
-                                        <th class="border-r">Total</th>
+                                        <th class="border-r border-gray-400">Past Dues</th>
+                                        <th class="border-r border-gray-400">Current Dues</th>
+                                        <th class="border-r border-gray-400">Total</th>
+                                        <th class="border-r border-gray-400">Past Dues</th>
+                                        <th class="border-r border-gray-400">Current Dues</th>
+                                        <th class="border-r border-gray-400">Total</th>
+                                        <th class="border-r border-gray-400">Past Dues</th>
+                                        <th class="border-r border-gray-400">Current Dues</th>
+                                        <th class="border-r border-gray-400">Total</th>
+                                        <th class="border-r border-gray-400">Past Dues</th>
+                                        <th class="border-r border-gray-400">Current Dues</th>
+                                        <th class="border-r border-gray-400">Total</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r"></td>
-                                        <td class="border-r">
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td class="border-r">
+                                        <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
