--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
@@ -7,14 +7,16 @@
             [is_required_circle]="true" (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
 
-                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                    <mat-label class="customMatLabel">Date of Visit (dd/MM/yyyy) <strong class="matMandatory">*</strong>
-                    </mat-label>
-                    <input disabled matInput [matDatepicker]="picker" formControlName="VisitedDate"
-                        (dateChange)="setVisitedDate()" autocomplete="off" [min]="minDate" />
-                    <mat-datepicker-toggle [disabled]='false' matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker [disabled]='false' #picker></mat-datepicker>
-                </mat-form-field>
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                <mat-label class="customMatLabel">Date of Visit (dd/MM/yyyy) <strong class="matMandatory">*</strong>
+                </mat-label>
+                <input disabled matInput [matDatepicker]="picker" formControlName="VisitedDate" [matDatepickerFilter]=dateFilter
+                    (dateChange)="setVisitedDate()" autocomplete="off" [min]="minDate" />
+                <mat-datepicker-toggle [disabled]='false' matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker [disabled]='false' #picker></mat-datepicker>
+            </mat-form-field>
+
+            
 
         </div>
         <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
@@ -29,18 +31,17 @@
                 </mat-error> -->
             </mat-form-field>
         </div>
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
+        <!-- <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                 <mat-form-field appearance="fill" class="w-full">
                     <input matInput [matDatepicker]="dp" placeholder="Month" [formControl]="date">
                     <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
                 </mat-form-field>
-                <mat-datepicker #dp startView="multi-year"
-                 (monthSelected)="_selectMonthHandler($event,dp)"
+                <mat-datepicker #dp startView="multi-year" (monthSelected)="_selectMonthHandler($event,dp)"
                     panelClass="example-month-picker">
                 </mat-datepicker>
             </div>
-        </div>
+        </div> -->
         <div class="col-lg-3 col-sm-12  kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -59,108 +60,14 @@
             </div>
         </div>
     </div>
-
-
-
-
     <div>
-        <div class="form-group row px-3 shadow-none" style="
-        min-width: max-content;
-        overflow-y:scroll;"
-        id="pagelist"
-        >
-            <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile border shadow-xs rounded-sm bg-gray-50"
-                 id="custom-table-activity-list">
-                <div class="custom-accordion  rounded-lg my-2 bg-white shadow-sm border"
-                     *ngFor="let activity of tragetLitsPartnentDto;let i=index" >
-                    <div class="custom-accordion-head border-0"
-                         style="cursor: pointer">
-                        <div class="self-center ml-8">
-                            <span class="text-base text-green">
-                                {{activity.date | date}}
-                            </span>
-                        </div>
-
-                        <div class="mr-8">
-                            <button mat-icon-button (click)="display(i, 'data')" >
-                                <mat-icon>expand_more </mat-icon>
-                            </button>
-                            <button mat-icon-button (click)="display(i, 'data')">
-                                <mat-icon>expand_less</mat-icon>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="custom-accordion-body bg-gray-50 border-t rounded"
-                         id="{{'table_'+i}}"
-                         style="display: none">
-                         <button (click)="addTragetLitsChileDto(i)" mat-icon-button>
-                            <mat-icon >add</mat-icon>
-                        </button>
-                        
-                        <table class="table table-responsive" style="display: inline-table !important;">
-                            <thead class="thead-light">
-                            <tr class="table-header-background">
-                                <th>Sr. No</th>
-                                <th>Purpose</th>
-                                <th>Purpose</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr *ngFor="let child of activity?.tragetLitsChileDto; let row=index;">
-                                <td>{{row+1}}</td>
-                                <td>
-                                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Purpose<strong class="matMandatory">*</strong></mat-label>
-                                            <mat-select >
-                                                <mat-option *ngFor="let loanType of purposeofVisitLov" [value]="loanType.Value">
-                                                    {{loanType.Name}}
-                                                </mat-option>
-                                            </mat-select>
-                                            <!-- <mat-error *ngIf="hasError('DevProdFlag', 'required')">LoanType <strong>required</strong>
-                                            </mat-error> -->
-                                        </mat-form-field>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="col-lg-3 col-sm-12  kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
-                                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                                <mat-label class="customMatLabel">Remarks</mat-label>
-                                                <input matInput  placeholder="Enter Remarks" 
-                                                    autocomplete="off" />
-                                            </mat-form-field>
-                                        </div>
-                                    </div>
-
-                                </td>
-                             
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
-                </div>
-
-
-            </div>
-        </div>
-
     </div>
-
-
-
-
-
-
-
-
     <div class="container  px-0 pt-2">
         <div class="table-responsive  border shadow-xs rounded-sm bg-gray-50" id="map_canvas">
             <table class="table accordion table-striped">
                 <thead>
                     <tr class="table-header-background">
-                        <th scope="col">SR. No</th>
+                        <th scope="col">SR. No </th>
                         <th scope="col">User</th>
                         <th scope="col">Visited Date</th>
                         <th scope="col">Purpose </th>
@@ -182,6 +89,3 @@
         </div>
     </div>
 </div>
-
-
-  
