changes in Tour Diary

--- a/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
@@ -155,16 +155,17 @@
                                 <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
-                                        <th colspan="15" class="border-r border-gray-400">RECOVERY</th>
+                                        <th colspan="16" class="border-r border-gray-400">RECOVERY</th>
                                     </tr>
                                     </thead>
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <!-- UTILIZATIONS -->
                                         <th colspan="3" class="border-r border-gray-400">Annual Target/Recoverable of Province/Zone/Branch/Circle</th>
-                                        <th colspan="3" class="border-r border-gray-400">Recovery during the month under report</th>
+                                        <th colspan="3" class="border-r border-gray-400">Proportionate Target upto the end of month under report</th>
+                                        <th colspan="3" class="border-r border-gray-400">Recovery achievement until the month under report  </th>
                                         <th colspan="3" class="border-r border-gray-400">Balance Recoverable</th>
-                                        <th colspan="3" class="border-r border-gray-400">Recovery during corresponding period</th>
+                                        <th rowspan="2" class="border-r border-gray-400">Recovery during the corresponding period</th>
                                         <th rowspan="2" class="border-r border-gray-400">Increase/Deficit</th>
                                         <th rowspan="2" class="border-r border-gray-400">Measures/Efforts for boosting up recovery</th>
                                         <th rowspan="2" class="border-r border-gray-400">Remarks</th>
@@ -199,15 +200,16 @@
                                         <td class="border-r border-gray-400"></td>
                                         <td class="border-r border-gray-400"></td>
                                         <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
