--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -40,7 +40,7 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">P.P.NO</mat-label>
-                                            <input matInput formControlName="PPNO" autocomplete="off" readonly="readonly"/>
+                                            <input matInput formControlName="Ppno" autocomplete="off" readonly="readonly"/>
                                         </mat-form-field>
                                     </div>
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
@@ -61,13 +61,13 @@
 
                             </div>
 
-                            <div class="col-lg-12 p-0 ist-table overflow-auto border shadow-xs rounded-sm bg-gray-50 mt-2">
+                            <div class="col-lg-12 p-0  third-table  overflow-auto border shadow-xs rounded-sm bg-gray-50 mt-2">
                                 <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
-                                        <th class="border-r border-gray-400">Date</th>
-                                        <th colspan="2" class="border-r border-gray-400">Departure from</th>
-                                        <th colspan="2" class="border-r border-gray-400">Arrival at</th>
+                                        <th rowspan="2" class="border-r border-gray-400">Date</th>
+                                        <th colspan="2" rowspan="2" class="border-r border-gray-400">Departure from</th>
+                                        <th colspan="2" rowspan="2" class="border-r border-gray-400">Arrival at</th>
                                         <th colspan="6" class="border-r border-gray-400">Portfolio of the branch visited</th>
                                         <th colspan="3" class="border-r border-gray-400">Recovery</th>
                                         <th rowspan="4" class="border-r border-gray-400">No. of loan cases in which recovery suits have been filed in Banking Court by the
@@ -75,11 +75,6 @@
                                         </th>
                                     </tr>
                                     <tr class="table-header-background text-center">
-                                        <th rowspan="2" class="border-r border-gray-400"></th>
-                                        <th rowspan="2" class="border-r border-gray-400">Place</th>
-                                        <th rowspan="2" class="border-r border-gray-400">Time</th>
-                                        <th rowspan="2" class="border-r border-gray-400">Place</th>
-                                        <th rowspan="2" class="border-r border-gray-400">Time</th>
                                         <th colspan="2" class="border-r border-gray-400">General</th>
                                         <th colspan="2" class="border-r border-gray-400">NPL's</th>
                                         <th colspan="2" class="border-r border-gray-400">Sam</th>
@@ -88,6 +83,11 @@
                                         <th rowspan="2" class="border-r border-gray-400">No. of Notices issued by the branch to SPA/Guarantors</th>
                                     </tr>
                                     <tr class="table-header-background text-center">
+                                        <th class="border-r border-gray-400"></th>
+                                        <th class="border-r border-gray-400">Place</th>
+                                        <th class="border-r border-gray-400">Time</th>
+                                        <th class="border-r border-gray-400">Place</th>
+                                        <th class="border-r border-gray-400">Time</th>
                                         <th class="border-r border-gray-400">No.</th>
                                         <th class="border-r border-gray-400">Amt.</th>
                                         <th class="border-r border-gray-400">No.</th>
@@ -100,31 +100,36 @@
                                     <tr>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
-                                                <input matInput>
+                                                            appearance="outline" style="width: 12rem !important">
+                                                <mat-label>Branches</mat-label>
+                                                <mat-select matInput>
+                                                    <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode">
+                                                        {{branch?.Name}}
+                                                    </mat-option>
+                                                </mat-select>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
@@ -170,19 +175,19 @@
                                     <tr>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
@@ -197,13 +202,13 @@
                                         <td class="border-r border-gray-400"></td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
