--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -70,7 +70,7 @@
                                         <th rowspan="3" class="border-r border-gray-400">Date</th>
                                         <th colspan="2" rowspan="2" class="border-r border-gray-400">Departure from</th>
                                         <th colspan="2" rowspan="2" class="border-r border-gray-400">Arrival at</th>
-                                        <th colspan="6" class="border-r border-gray-400">Portfolio of the Province/Zone/Branch/Circle (Can See Portfolio For Both)</th>
+                                        <th colspan="6" class="border-r border-gray-400">Portfolio of the Province/Zone/Branch/Circle</th>
                                         <th rowspan="3" class="border-r border-gray-400">No. of defaulters contacted </th>
                                         <th rowspan="3" class="border-r border-gray-400">Results of contacts so made
                                         </th>
@@ -154,16 +154,17 @@
                                 <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
-                                        <th colspan="15" class="border-r border-gray-400">RECOVERY</th>
+                                        <th colspan="16" class="border-r border-gray-400">RECOVERY</th>
                                     </tr>
                                     </thead>
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <!-- UTILIZATIONS -->
                                         <th colspan="3" class="border-r border-gray-400">Annual Target/Recoverable of Province/Zone/Branch/Circle</th>
-                                        <th colspan="3" class="border-r border-gray-400">Recovery during the month under report</th>
+                                        <th colspan="3" class="border-r border-gray-400">Proportionate Target upto the end of month under report</th>
+                                        <th colspan="3" class="border-r border-gray-400">Recovery achievement during the month under report </th>
                                         <th colspan="3" class="border-r border-gray-400">Balance Recoverable</th>
-                                        <th colspan="3" class="border-r border-gray-400">Recovery during corresponding period</th>
+                                        <th rowspan="2" class="border-r border-gray-400">Recovery during the corresponding period</th>
                                         <th rowspan="2" class="border-r border-gray-400">Increase/Deficit</th>
                                         <th rowspan="2" class="border-r border-gray-400">Measures/Efforts for boosting up recovery</th>
                                         <th rowspan="2" class="border-r border-gray-400">Remarks</th>
@@ -198,15 +199,16 @@
                                         <td class="border-r border-gray-400"></td>
                                         <td class="border-r border-gray-400"></td>
                                         <td class="border-r border-gray-400"></td>
+                                        <td class="border-r border-gray-400"></td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
+                                                            appearance="outline" style="width: 12rem !important">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
