--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
@@ -6,19 +6,27 @@
         <app-zone-branch-circle [form]="tourPlanForm" [should_filter]="true" [should_show_circle]="true"
             [is_required_circle]="true" (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label class="customMatLabel">Date of Visit (dd/MM/yyyy) <strong class="matMandatory">*</strong>
                 </mat-label>
                 <input disabled matInput [matDatepicker]="picker" formControlName="VisitedDate" [matDatepickerFilter]=dateFilter
                     (dateChange)="setVisitedDate()" autocomplete="off" [min]="minDate" />
                 <mat-datepicker-toggle [disabled]='false' matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker [disabled]='false' #picker></mat-datepicker>
+                <mat-datepicker [disabled]='false' #picker [calendarHeaderComponent]="exampleHeader" ></mat-datepicker>
             </mat-form-field>
+        </div>
+        <!-- <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+
+            <mat-form-field>
+                <mat-label>Custom calendar header</mat-label>
+                <input matInput [matDatepicker]="picker" [matDatepickerFilter]=dateFilter>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker [calendarHeaderComponent]="exampleHeader"></mat-datepicker>
+              </mat-form-field>
 
             
 
-        </div>
+        </div> -->
         <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label class="customMatLabel">Purpose<strong class="matMandatory">*</strong></mat-label>
