--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -2,7 +2,7 @@
     class="  sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-auto bg-card dark:bg-transparent">
     <div
     class="sm:inset-0 flex flex-col flex-auto min-w-0 overflow-x-hidden overflow-y-auto bg-card dark:bg-transparent">
-    <div [hidden]="isChild" class="heading">Set Target
+    <div [hidden]="isChild" class="heading"> Target Setting
     </div>
     <div [hidden]="isChild" class="pt-3" [formGroup]="targetForm">
         <div class="row">
