--- a/src/app/modules/tour-dairy/Targets.component.scss
+++ b/src/app/modules/tour-dairy/Targets.component.scss
@@ -26,12 +26,12 @@ foreignObject{
     }
 }
 
-.dash-tab{
 
-    .mat-tab-labels{
-        .mat-tab-label-active{
-            display: none;
-        }
-    }
-
+.mat-tab-group .mat-tab-header .mat-tab-label-container .mat-tab-list .mat-tab-labels .mat-tab-label.mat-tab-label-active {
+    --tw-bg-opacity: 1 !important;
+    background-color: #01671B !important;
+    color: white !important;
+    display: none !important;
 }
+
+//.dash-tab{ display: none;}
